Реализовать взаимодействие с БД.